--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "mkdirp": "*",
     "winston": "*",
+    "winston-daily-rotate-file": "^1.0.1",
     "winston-mongodb": "*"
   },
   "devDependencies": {
