--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "mkdirp": "*",
     "winston": "^2.1.0",
-    "winston-daily-rotate-file": "^1.0.1",
-    "winston-mongodb": "*"
+    "winston-daily-rotate-file": "^1.0.1"
   },
   "devDependencies": {
     "sails": "~0.11.0",
