--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "winston": "^2.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.3.15",
+    "babel-preset-es2015": "^6.3.13",
+    "cz-conventional-changelog": "^1.1.5",
+    "mocha": "*",
     "sails": "~0.11.0",
-    "should": "*",
-    "mocha": "*"
+    "should": "*"
   },
   "engines": {
     "node": ">= 0.10.0",
@@ -38,5 +41,10 @@
   },
   "sails": {
     "isHook": true
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
