--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.3.15",
+    "babel-plugin-add-module-exports": "^0.1.1",
     "babel-preset-es2015": "^6.3.13",
     "cz-conventional-changelog": "^1.1.5",
     "mocha": "*",
