chore(package): Restructurize the whole project

--- a/.npmignore
+++ b/.npmignore
@@ -1,20 +1,4 @@
-*#
-node_modules
-ssl
-.DS_STORE
-*.swo
-*.swp
-*.swn
-*.swm
-*~
-.idea
-nbproject
-.git
-.gitignore
-.tmp
-.jshintrc
-.editorconfig
-CONTRIBUTING.md
-*.md
-**/*.md
+coverage
+src
 test
+.idea
