--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,20 @@
+sudo: false
 language: node_js
+cache:
+  directories:
+    - node_modules
+notifications:
+  email: true
 node_js:
-  - "0.12"
-  - "0.11"
-  - "0.10"
-  - "iojs"
+  - stable
+  - 4
+before_script:
+  - npm prune
+after_success:
+  - 'curl -Lo travis_after_all.py https://git.io/travis_after_all'
+  - python travis_after_all.py
+  - 'export $(cat .to_export_back) &> /dev/null'
+  - npm run coveralls
+branches:
+  except:
+    - "/^v\\d+\\.\\d+\\.\\d+$/"
