--- a/package.json
+++ b/package.json
@@ -1,32 +1,10 @@
 {
   "name": "sails-hook-winston",
   "description": "Integrates winston logging system with your Sails application",
-  "version": "0.2.1",
-  "author": {
-    "name": "Kiko Beats",
-    "email": "josefrancisco.verdu@gmail.com",
-    "url": "https://github.com/Kikobeats"
-  },
-  "bugs": {
-    "url": "Kikobeats/sails-hook-winston/issues"
-  },
-  "dependencies": {
-    "mkdirp": "*",
-    "winston": "^2.1.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.3.15",
-    "babel-plugin-add-module-exports": "^0.1.1",
-    "babel-preset-es2015": "^6.3.13",
-    "cz-conventional-changelog": "^1.1.5",
-    "mocha": "*",
-    "sails": "~0.11.0",
-    "should": "*"
-  },
-  "engines": {
-    "node": ">= 0.10.0",
-    "npm": ">= 1.4.0"
-  },
+  "version": "1.0.0",
+  "license": "MIT",
+  "main": "lib/index.js",
+  "repository": "Kikobeats/sails-hook-winston",
   "homepage": "Kikobeats/sails-hook-winston",
   "keywords": [
     "sails",
@@ -34,11 +12,45 @@
     "winston",
     "logging"
   ],
-  "license": "MIT",
-  "main": "./index.js",
-  "repository": "Kikobeats/sails-hook-winston",
+  "author": {
+    "name": "Kiko Beats",
+    "email": "josefrancisco.verdu@gmail.com",
+    "url": "https://github.com/Kikobeats"
+  },
+  "contributors": [
+    {
+      "name": "Eugene Obrezkov",
+      "email": "ghaiklor@gmail.com",
+      "url": "http://ghaiklor.com/"
+    }
+  ],
+  "bugs": {
+    "url": "Kikobeats/sails-hook-winston/issues"
+  },
   "scripts": {
-    "test": "sh test/test.sh"
+    "compile": "babel src --out-dir lib",
+    "coveralls": "cat coverage/lcov.info | coveralls",
+    "prepublish": "npm run compile",
+    "test": "babel-node ./node_modules/.bin/isparta cover _mocha"
+  },
+  "dependencies": {
+    "winston": "2.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "6.3.15",
+    "babel-plugin-add-module-exports": "0.1.1",
+    "babel-preset-es2015": "6.3.13",
+    "chai": "3.4.1",
+    "coveralls": "2.11.4",
+    "cz-conventional-changelog": "1.1.5",
+    "isparta": "4.0.0",
+    "mocha": "2.3.4",
+    "sails": "0.11.3",
+    "sinon": "1.17.2"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   },
   "sails": {
     "isHook": true
@@ -47,5 +59,11 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "publishConfig": {
+    "tag": "latest"
+  },
+  "release": {
+    "branch": "master"
   }
 }
