--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,15 @@ notifications:
   email: true
 node_js:
   - stable
+  - 5
   - 4
+  - 0.12
+  - 0.10
+before_install:
+  - npm install -g npm@latest
 before_script:
   - npm prune
 after_success:
-  - 'curl -Lo travis_after_all.py https://git.io/travis_after_all'
-  - python travis_after_all.py
-  - 'export $(cat .to_export_back) &> /dev/null'
   - npm run coveralls
 branches:
   except:
