--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
       "url": "http://ghaiklor.com/"
     }
   ],
+  "maintainers": [
+    {
+      "name": "Eugene Obrezkov",
+      "email": "ghaiklor@gmail.com",
+      "url": "http://ghaiklor.com"
+    }
+  ],
   "bugs": {
     "url": "Kikobeats/sails-hook-winston/issues"
   },
@@ -34,18 +41,19 @@
     "test": "babel-node ./node_modules/.bin/isparta cover _mocha"
   },
   "dependencies": {
+    "moment": "2.11.2",
     "winston": "2.1.1"
   },
   "devDependencies": {
-    "babel-cli": "6.4.5",
+    "babel-cli": "6.5.1",
     "babel-plugin-add-module-exports": "0.1.2",
-    "babel-preset-es2015": "6.3.13",
+    "babel-preset-es2015": "6.5.0",
     "chai": "3.5.0",
     "coveralls": "2.11.6",
     "cz-conventional-changelog": "1.1.5",
     "isparta": "4.0.0",
     "mocha": "2.4.5",
-    "sails": "0.11.4",
+    "sails": "0.12.1",
     "sinon": "1.17.3"
   },
   "engines": {
